--- a/page1.html
+++ b/page1.html
@@ -29,52 +29,13 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2><br />
-							Below are some examples of my work.<br /></h2>
+							<h1><br />About me.<br /></h1>
 						</header>
-						<p>I am an amatuer coder (Python, HTML/CSS), visual storyteller, and business consultant.</p>				
+						<p>I graduated summa cum laude from the University of Oregon's honors college with a degree in business. My thesis was titled, "Innovating in University Career Services: Social Capital and Generalized Social Exchange."<br><br>
+						 Upon graduating, I was one of the first employees at tech start-up called <a href="https://nulia.cloud/" class="link">Nulia</a>. I helped them put together a business plan for their $2M seed raise.<br><br>
+						 I then transitioned into management consulting and started working on freelance projects in my spare time.</p>				
 						<ul class="actions">
-							<li><a href="page1.html" class="button">Learn more</a></li>
-						</ul>
-					</section>
-
-				<!-- Two -->
-					<section id="two">
-						<h2>Recent Work</h2>
-						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-						</div>
-						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
+							<li><a href="index.html" class="button">Home</a></li>
 						</ul>
 					</section>
 
