Add files from Instrument Site to create new portfolio site.

--- a/aboutme.html
+++ b/aboutme.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/gabrilogo.JPG"/>
 	</head>
 	<body class="is-preload">
 
@@ -12,9 +13,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/GabriHead1.jpg" alt="" /></a>
-					<h1><strong>Hello, my name is Gabri Chodosh.</strong><br />
-					I work at the intersection of research,<br />
-					strategic planning, and content production.</a></h1>
+					<h1><strong>I conduct market research and drive business growth by working cross-functionally to produce thoughtful digital content and business development strategies that engage consumers.</strong></h1>
+					<br />
+					<a href="home.html" class="button" class="align-right">Go to Home</a>
 				</div>
 			</header>
 
@@ -24,53 +25,82 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h1><br />About me.<br /></h1>
+							<h1><br />About Me:<br /></h1>
 						</header>
 						<p>I graduated summa cum laude from the University of Oregon's honors college with a degree in business. My thesis was titled, "Innovating in University Career Services: Social Capital and Generalized Social Exchange."<br><br>
-						 Upon graduating, I was one of the first employees at tech start-up called <a href="https://nulia.cloud/" class="link">Nulia</a>. I helped them put together a business plan for their $2M seed raise.<br><br>
-						 I then transitioned into management consulting and started working on freelance projects in my spare time.</p>				
-						<ul class="actions">
-							<li><a href="index.html" class="button">Home</a></li>
-						</ul>
+						 Upon graduating, I was one of the first employees at a tech start-up called <a href="https://nulia.cloud/" class="link">Nulia</a>. I helped them put together a business plan for their $2M seed raise.<br><br>
+						 I then transitioned into consulting and started working on freelance projects in my spare time.<br><br>
+						I work extensively with <a href="https://www.oyf.com/" class="link">On Your Feet</a>, a consultancy in town that works with major brands like Nike, Disney and Intel to design and faciliate interactive corporate training, culture development and ideation experiences.</p>				
+						<h2><br />I also do some coding.<br /></h2>
+						<p>I coded and designed this website (from a template) using HTML/CSS and have learned the basics of JavaScript, Python and SQL.<br><br>
+						You can check out my Github <a href="https://github.com/chodoshg" class="link">here</a>.<br><br></p>
 					</section>
 
-				<!-- Three -->
-					<section id="three">
-						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+					<!-- Two -->
+					<section id="two">
+						<h2>Building a Digital Presence for Brands</h2>
 						<div class="row">
-							<div class="col-8 col-12-small">
-								<form method="post" action="#">
-									<div class="row gtr-uniform gtr-50">
-										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-									</div>
-								</form>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</div>
-							<div class="col-4 col-12-small">
-								<ul class="labeled-icons">
-									<li>
-										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
-										United States
-									</li>
-									<li>
-										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
-									</li>
-									<li>
-										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
-									</li>
-								</ul>
-							</div>
-						</div>
+							<article class="col-6 col-12">
+								<h3>On Your Feet + Swift Case Study</h3>
+								<p>First of a series of video testimonials/case study write-ups I produced for the new company website.</p>
+								<div class="videoWrapper">
+									<iframe width="560" height="315" src="https://player.vimeo.com/video/376868371" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								</div><br><br>
+							</article>
+							<article class="col-6 col-12">
+								<h3>Small Things to Try: How to Become a Better Presenter</h3>
+								<p>First of a series of video tips I produced for my company.</p>
+								<div class="videoWrapper">
+									<iframe width="560" height="315" src="https://www.youtube.com/embed/lNKngDhbuJM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								</div><br><br>
+							</article>
+							<article class="col-6 col-12">
+								<h3>Oregon Consulting Group Promo Video</h3>
+								<p>Promotional video I produced for my consulting group as one of the co-leaders of the group.</p>
+								<div class="videoWrapper">
+									<iframe width="560" height="315" src="https://www.youtube.com/embed/7OJqTVarMaA"  frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								</div><br><br>
+							</article>
+						</div>	
 					</section>
+
+					<!-- Three -->
+					<section id="three">		
+						<h2>Project Highlights</h2>
+						<header>
+								<h4>Design-Thinking: Persona Development for a $95 Million Renovation</h4>
+								<p><span class="image right"><img src="images/uologo.png" alt="" /></span><p>I led a team of 4 consultants in a design-thinking project that involved online survey development & deployment, interviews, focus groups and persona development. Our deliverable helped influence the $95 million renovation plans of the University of Oregon's Erb Memorial Union. Read more <a href="https://business.uoregon.edu/news/student-experience-project" class="link">here</a>.</p>						
+						</header>
+						<header>
+							<h4>Transforming a Brand: A Company's Steward-Ownership Viability</h4>
+							<p><span class="image right"><img src="images/ogclogo.png" alt="" /></span><p>Alongside a VP of Finance and former Director of Growth, I modified a complex valuation model for a client looking to transition their business to a steward-ownership model. Our deliverable included the financial model and a recommended exit scenario that would make the ownership transition feasible.</p>						
+						</header>
+						<br>
+						<header>
+							<h4>Mapping an Ecosystem: Moving VertueLab from Spreadsheets to Airtable</h4>
+							<p><span class="image right"><img src="images/vertuelablogo.png" alt="" /></span><p>I worked with the Director of Impact Investing at a non-profit to help transfer their customer relationship database (which was in Google Sheets) to a new CRM system called Airtable. In the process, I updated and cleaned the data and provided strategic guidance regarding who they should contact.</p>						
+						</header>
+						<br>
+					</section>	
+				<!-- Three -->
+				<section id="three">
+					<h2>Thanks for Reading!</h2>
+					<p>I'm very interested in meeting Pete Lizotte, Jessica Hartley, Brett Bergeron, Jason King, John Whaley, Ravi Mongia, Adam Gault, Autumn Utley, Justin Spohn, Quinn Simpson, Renee Ferron, and Brandon Thornton.</p>
+						<div class="col-4 col-12-small">
+							<ul class="labeled-icons">
+								<li>
+									<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
+									Portland, OR<br />
+									United States
+								</li>
+								<li>
+									<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
+									<a href="#">gabriele.chodosh@gmail.com</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</section>
 
 				<!-- Four -->
 				<!--
@@ -396,13 +426,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://linkedin.com/in/gabriele-chodosh-881b4566" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/chodoshg" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="mailto:gabriele.chodosh@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Gabriele Chodosh</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
